  * Update to PMD 4.1
  * Update to fb-contrib 3.6.1
  * Update to Checkstyle 4.4
  * Fixed bugs: #43 #50 #53
  * The log messages can now use a custom logger to log to and
    does not need to use the logger assigned to the LoggableImpl.
    Therefore the LogMessageGenerator ant task has 2 more
    parameters: allowUseOfBaseLogger and customLoggerClass
  * The LogFormater now also respects java text formating in
    trace messages (was broken).
  * Generated types now throw more detailed exceptions for
    length and value range validations.
  * Generated StrongTypes (immutable ones) do implement a
    common interface (StrongType).
  * The jcreport can now read emma 'es' files to as coverage
    info. http://emma.sourceforge.net/
  * The generated value objects do now have a copy constructor if
    they do not have a final and initialized field.
    For generated type changes please also check out:
    https://www.jcoderz.org/fawkez/wiki/SimpleTypesGenerator
  * User type names camel case alignment was not correct. A member
    of a value type named 'TestValue' got the name 'mTestvalue' but
    should be mTestValue. Take care since this changes the interface
    of the generated code!
  * Generated service level exceptions are now abstract to prevent
    them from being directly used.
  * The BaseRuntimeException and the BaseException now log
    the fact that they are created with the loglevel FINE.
    So if you are in the situation that you have to find
    an exception that is swallowed somewhere accidentally,
    you can use this output to find it again.


Fawkez 1.1 'The Man Trap' (March 31, 2007)
http://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_1_0

  * New features: #34
  * Added new severity levels as proposed in #16
  * Fixed bugs: #10
  * added fb-contrib support #14 (V3.0.5)
  * added up-to-date check for retrieve-3rd-party-libs target

Fawkez 1.0 'going public' (November 26, 2006)
http://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_0_0