@@ -189,6 +189,12 @@ public class BaseRuntimeException
    }
 
    /** {@inheritDoc} */
+   public String getThreadName ()
+   {
+       return mLoggable.getThreadName();
+   }
+
+   /** {@inheritDoc} */
    public String toString ()
    {
        return mLoggable.toString();
