@@ -38,7 +38,13 @@ Fawkez 1.2 'Charlie X'
     So if you are in the situation that you have to find
     an exception that is swallowed somewhere accidentally,
     you can use this output to find it again.
-
+  * Log formatter ignores the category field but now outputs
+    the last 9 characters of the thread name. In case of a
+    ordinary log record the the name of the logger thread is
+    used. This might be wrong in certain setups but is
+    correct in many cases. The fawkeZ loggable records the
+    thread name of the thread that created the loggable instance
+    which is the correct thread name in all cases. #58
 
 Fawkez 1.1 'The Man Trap' (March 31, 2007)
 http://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_1_0
